# semantic-prosodic-writing-studio

./: .gitignore  app.py  pyproject.toml
.github/workflows/: spws-ci.yml
apps/studio-api/: main.py
apps/studio-web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/studio-web/e2e/: studio.spec.ts
apps/studio-web/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
apps/studio-web/src/__tests__/: TradeOffSummary.test.tsx
apps/studio-web/src/components/: AnalysisWorkspace.tsx  CandidatesWorkspace.tsx  ExportWorkspace.tsx  ImportWorkspace.tsx  PlanWorkspace.tsx  TradeOffSummary.tsx
apps/studio-web/src/utils/: summaries.ts
apps/studio_api/: __init__.py  main.py
blog/docs/temp/: spws_promotion_registry.md  spws_release_evidence.md  spws_release_gates.md
config/: spws.toml
fixtures/ci/: library-release-consumer.yml
fixtures/contracts/: input-package.json  raw-source.json
fixtures/fragments/Phrases/: iambic_walk.md  meadow_gold.md
fixtures/fragments/Poetry/: quiet_river.md
fixtures/fragments/Prose/: earth_remembers.md
fixtures/pkl/: meter_basics.md  revision_guide.md  rhyme_reference.md
fixtures/poetry/: adversarial_repetition_14.txt  pastoral_12_lines.txt  sample_poem.txt  stress_emptyish.txt  stress_long_20.txt  stress_unicode_meter.txt
pipelines/: analysis_suite_v0.yaml  constrained_poetry_generation_v0.yaml  local_revision_v0.yaml  source_board_v0.yaml  source_ingestion_v0.yaml
schemas/contracts-core/0.1.0-dev.2/: compatibility.json  digest.json  release.json  schema.json
schemas/contracts-core/0.1.0-dev.2/fixtures/invalid/: invalid-identity.json  invalid-parent-self-cycle.json  invalid-provenance-self-relation.json
schemas/contracts-core/0.1.0-dev.2/fixtures/valid/: content-free-tombstone.json  crlf-span-mapping.json  external-transmission-denial.json  minimal-envelope.json  qualified-present.json  qualified-unavailable.json  unicode-combining-span.json  unicode-emoji-span.json
schemas/contracts-core/0.1.0-dev.2/models/: agent-reference.schema.json  alternative-record.schema.json  direct-provenance-summary.schema.json  duty-record.schema.json  extension-record.schema.json  external-identifier.schema.json  failure-record.schema.json  payload-descriptor.schema.json  policy-decision.schema.json  provenance-relation.schema.json  qualified-value.schema.json  retention-policy.schema.json  review-record.schema.json  schema-reference.schema.json  span-map-segment.schema.json  span-mapping.schema.json  text-quote-selector.schema.json  text-representation.schema.json  time-window.schema.json  version-range.schema.json  version-reference.schema.json  warning-record.schema.json
schemas/contracts-core/0.1.0-dev.2/validation/: npm-audit.json  summary.json  typecheck-results.json
schemas/domain/0.1.0/: analysis-bundle.schema.json  candidate.schema.json  compatibility.json  conflict-info.schema.json  input-package.schema.json  manifest.json  manuscript-version.schema.json  meaning-profile.schema.json  meaning-unit.schema.json  pkl-promotion-bundle.schema.json  pkl-query.schema.json  pkl-relationship.schema.json  pkl-result.schema.json  provenance-stamp.schema.json  raw-source.schema.json  revision-decision.schema.json  revision-operation.schema.json  run-manifest.schema.json  similarity-hit.schema.json  similarity-query.schema.json  similarity-result-set.schema.json  structural-unit.schema.json  text-span.schema.json  work-specification.schema.json
tests/: conftest.py  test_integration.py
tests/component/: test_storage_outside_repos.py  test_wordrare_capabilities.py
tests/contract/: test_domain_contracts.py  test_phase1_policy_contracts.py
tests/end_to_end/: test_studio_api_smoke.py  test_studio_playwright.py  test_vertical_demo.py
tests/integration/: test_analysis_fanout.py  test_catalogue_pipeline.py  test_collage_r2.py  test_diagnosis_and_revise.py  test_evaluation_bundle.py  test_executor_pause_resume.py  test_manuscript_sqlite.py  test_meaning_gauge.py  test_meaning_tags_and_index.py  test_pinned_library_snapshot.py  test_pipeline_handlers.py  test_poetry_revision_slice.py  test_r1_vertical_slice.py  test_revise_decide_export.py  test_serious_demo_walkthrough.py  test_tombstone.py
tests/stress/: __init__.py  conftest.py  test_analysis_adversarial.py  test_api_studio_pressure.py  test_assist_and_catalogue.py  test_collage_pressure.py  test_hypothesis_spans.py  test_orchestration_storage.py  test_revision_pressure.py  test_rights_privacy_matrix.py
tools/: acceptance_check.py  build_release_bundle.sh
typescript/domain/0.1.0/: index.d.ts
