[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-prosodic-writing-studio"
version = "0.1.0"
description = "Semantic–Prosodic Writing Studio monorepo"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "LicenseRef-Proprietary"
authors = [{ name = "Alexander Einoder" }]
dependencies = [
  "spws-contracts-core",
  "spws-pkl-adapter",
  "spws-storage",
  "spws-ingestion",
  "spws-analysis",
  "spws-revision",
  "spws-cli",
  "wordrare",
  "pydantic>=2.13",
  "pyyaml>=6.0",
  "python-frontmatter>=1.1.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "jsonschema>=4.26",
  "hypothesis>=6.0",
  "build>=1.3",
]
embeddings = [
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
wordrare-full = [
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "nltk>=3.8",
  "pronouncing>=0.2",
  "networkx>=3.0",
  "scikit-learn>=1.4",
]

[project.scripts]
spws = "spws_cli.main:main"
wordrare = "wordrare.generation.engine:main"

[tool.setuptools.packages.find]
where = [
  "packages/storage/src",
  "packages/ingestion/src",
  "packages/analysis/src",
  "packages/revision/src",
  "packages/spws_cli/src",
  "packages/adapters/pkl/src",
]
include = ["spws_cli*", "spws_storage*", "spws_analysis*", "spws_revision*", "spws_ingestion*", "spws_pkl_adapter*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = [
  "tests/contract",
  "tests/integration",
  "tests/end_to_end",
  "tests/component",
  "packages/contracts/core/tests",
  "packages/adapters/pkl/tests",
]
markers = [
  "integration: integration tests",
  "end_to_end: full vertical slice",
  "pinned_snapshot: requires Library checkout",
]

[tool.uv.workspace]
members = [
  "packages/contracts/core",
  "packages/adapters/pkl",
  "packages/storage",
  "packages/ingestion",
  "packages/analysis",
  "packages/revision",
  "packages/spws_cli",
  "packages/wordrare",
]

[tool.uv.sources]
spws-contracts-core = { workspace = true }
spws-pkl-adapter = { workspace = true }
spws-storage = { workspace = true }
spws-ingestion = { workspace = true }
spws-analysis = { workspace = true }
spws-revision = { workspace = true }
spws-cli = { workspace = true }
wordrare = { workspace = true }
